# GravityExample

./: .cproject  .project  Makefile  README.md  compareFilesWithThreshold.pl  diffBetween2Files.py  diffBetween2Files.sh
BackupCodes/SUNLIKE/: BasicAlgorithm_1-Domingo.f  BasicAlgorithm_1-Ruben.f90
C++/C++_CUDA/: .autotools  .cproject  .project  AUTHORS  NEWS  README  configure.ac
C++/C++_CUDA/src/: BasicAlgorithm.cpp
C++/C++_OpenACC/: .autotools  .cproject  .project  NEWS  README  configure.ac
C++/C++_OpenACC/src/: BasicAlgorithm.cpp
C++/C++_OpenMP/: .autotools  .cproject  .project  NEWS  README  configure.ac
C++/C++_OpenMP/src/: BasicAlgorithm.cpp
C++/C++_Serial/: .autotools  .cproject  .project  NEWS  README  configure.ac
C++/C++_Serial/src/: BasicAlgorithm.cpp  Makefile.am
fortran/Fortran_CUDA/: .autotools  .cproject  .project  NEWS  README  configure.ac
fortran/Fortran_CUDA/src/: BasicAlgorithm.f90  Makefile.am
fortran/Fortran_OpenACC/: .autotools  .cproject  .project  NEWS  README  configure.ac
fortran/Fortran_OpenACC/src/: BasicAlgorithm.f90
fortran/Fortran_OpenMP/: .autotools  .cproject  .project  NEWS  README  configure.ac
fortran/Fortran_OpenMP/src/: BasicAlgorithm_Josan.f90  BasicAlgorithm_Ruben.f90  Makefile.am
fortran/Fortran_Serial/: .autotools  .cproject  .project  NEWS  README  configure.ac
fortran/Fortran_Serial/src/: BasicAlgorithm.f90  BasicAlgorithm_Domingo.f  Makefile.am
in/: I1I2.txt
